[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/sceneless_scripts/autoload/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/game_objects/BackgroundsTileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Props/Bridge.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/game_objects/WallsTileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Props/Button.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/scenes/levels/Transitions.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/game_objects/LevelExit.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/game_objects/Checkpoint.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/scenes/game_objects/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/scenes/game_objects/obstacles/Spike.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/images/sprites/Placeholder_Background.png" type="Texture" id=11]
[ext_resource path="res://src/scenes/levels/prototypes/yummy/Scripts/yjb_lvl_04_backtrack.gd" type="Script" id=12]
[ext_resource path="res://src/scenes/game_objects/obstacles/Launcher.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/scenes/game_objects/DeadZone.tscn" type="PackedScene" id=14]

[node name="yjb_lvl_04_backtrack" type="Node2D"]
script = ExtResource( 12 )

[node name="MusicManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="TileMapContainer" type="Node" parent="."]

[node name="Background" type="TextureRect" parent="TileMapContainer"]
visible = false
margin_left = -40.0
margin_top = -72.0
margin_right = 1144.0
margin_bottom = 232.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundsTileMap" parent="TileMapContainer" instance=ExtResource( 2 )]

[node name="WallsTileMap" parent="TileMapContainer" instance=ExtResource( 4 )]
tile_data = PoolIntArray( -131073, 0, 0, -196608, 0, 0, -1, 0, 0, -65536, 0, 0, 65596, 0, 0, 65597, 0, 0, 131132, 0, 0, 131133, 0, 0, 786513, 1, 0, 786514, 1, 0, 786515, 1, 0, 786516, 1, 0, 786517, 1, 0, 786518, 1, 0, 786519, 1, 0, 786520, 1, 0, 786521, 1, 0, 786522, 1, 0, 786523, 1, 0, 786524, 1, 0, 786525, 1, 0, 786526, 1, 0, 786527, 1, 0, 786528, 1, 0, 786529, 1, 0, 786530, 1, 0, 786531, 1, 0, 786532, 1, 0, 786533, 1, 0, 786534, 1, 0, 786535, 1, 0, 786536, 1, 0, 786537, 1, 0, 786538, 1, 0, 786539, 1, 0, 786540, 1, 0, 786541, 1, 0, 786542, 1, 0, 786543, 1, 0, 786544, 1, 0, 786545, 1, 0, 786546, 1, 0, 786547, 1, 0, 786548, 1, 0, 786549, 1, 0, 786550, 1, 0, 786551, 1, 0, 786552, 1, 0, 786553, 1, 0, 786554, 1, 0, 786555, 1, 0, 786556, 1, 0, 786557, 1, 0, 786558, 1, 0, 786559, 1, 0, 852049, 1, 0, 852065, 1, 0, 852079, 1, 0, 852095, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 1, 0, 917531, 1, 0, 917532, 1, 0, 917533, 1, 0, 917534, 1, 0, 917535, 1, 0, 917536, 1, 0, 917537, 1, 0, 917538, 1, 0, 917539, 1, 0, 917540, 1, 0, 917541, 1, 0, 917585, 1, 0, 917601, 1, 0, 917615, 1, 0, 917631, 1, 0, 1048566, 1, 0, 1048567, 1, 0, 1048568, 1, 0, 1048569, 1, 0, 1048570, 1, 0, 1048571, 1, 0, 1048572, 1, 0, 1048573, 1, 0, 1048574, 1, 0, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983077, 1, 0, 983078, 1, 0, 983079, 1, 0, 983080, 1, 0, 983081, 1, 0, 983082, 1, 0, 983083, 1, 0, 983084, 1, 0, 983085, 1, 0, 983086, 1, 0, 983087, 1, 0, 983088, 1, 0, 983089, 1, 0, 983090, 1, 0, 983091, 1, 0, 983092, 1, 0, 983093, 1, 0, 983094, 1, 0, 983095, 1, 0, 983096, 1, 0, 983097, 1, 0, 983098, 1, 0, 983099, 1, 0, 983100, 1, 0, 983101, 1, 0, 983102, 1, 0, 983103, 1, 0, 983104, 1, 0, 983105, 1, 0, 983106, 1, 0, 983107, 1, 0, 983108, 1, 0, 983109, 1, 0, 983110, 1, 0, 983111, 1, 0, 983112, 1, 0, 983113, 1, 0, 983114, 1, 0, 983115, 1, 0, 983116, 1, 0, 983117, 1, 0, 983118, 1, 0, 983119, 1, 0, 983120, 1, 0, 983121, 1, 0, 983137, 1, 0, 983151, 1, 0, 983167, 1, 0, 1114102, 1, 0, 1048623, 1, 0, 1048624, 1, 0, 1048625, 1, 0, 1048626, 1, 0, 1048627, 1, 0, 1048628, 1, 0, 1048629, 1, 0, 1048630, 1, 0, 1048631, 1, 0, 1048632, 1, 0, 1048633, 1, 0, 1048634, 1, 0, 1048635, 1, 0, 1048636, 1, 0, 1048637, 1, 0, 1048638, 1, 0, 1048639, 1, 0, 1048640, 1, 0, 1048641, 1, 0, 1048642, 1, 0, 1048643, 1, 0, 1048644, 1, 0, 1048645, 1, 0, 1048646, 1, 0, 1048647, 1, 0, 1048648, 1, 0, 1048649, 1, 0, 1048650, 1, 0, 1048651, 1, 0, 1048652, 1, 0, 1048653, 1, 0, 1048654, 1, 0, 1048655, 1, 0, 1048656, 1, 0, 1048657, 1, 0, 1048673, 1, 0, 1048687, 1, 0, 1048703, 1, 0, 1179638, 1, 0, 1114159, 1, 0, 1114160, 1, 0, 1114161, 1, 0, 1114162, 1, 0, 1114163, 1, 0, 1114164, 1, 0, 1114165, 1, 0, 1114166, 1, 0, 1114167, 1, 0, 1114168, 1, 0, 1114169, 1, 0, 1114170, 1, 0, 1114171, 1, 0, 1114172, 1, 0, 1114173, 1, 0, 1114174, 1, 0, 1114175, 1, 0, 1114176, 1, 0, 1114177, 1, 0, 1114178, 1, 0, 1114179, 1, 0, 1114180, 1, 0, 1114181, 1, 0, 1114182, 1, 0, 1114183, 1, 0, 1114184, 1, 0, 1114185, 1, 0, 1114186, 1, 0, 1114187, 1, 0, 1114188, 1, 0, 1114189, 1, 0, 1114190, 1, 0, 1114191, 1, 0, 1114192, 1, 0, 1114193, 1, 0, 1114209, 1, 0, 1114223, 1, 0, 1114239, 1, 0, 1245174, 1, 0, 1179655, 0, 0, 1179656, 0, 0, 1179657, 0, 0, 1179658, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179695, 1, 0, 1179696, 1, 0, 1179697, 1, 0, 1179698, 1, 0, 1179699, 1, 0, 1179700, 1, 0, 1179701, 1, 0, 1179702, 1, 0, 1179703, 1, 0, 1179704, 1, 0, 1179705, 1, 0, 1179706, 1, 0, 1179707, 1, 0, 1179708, 1, 0, 1179709, 1, 0, 1179710, 1, 0, 1179711, 1, 0, 1179712, 1, 0, 1179713, 1, 0, 1179714, 1, 0, 1179715, 1, 0, 1179716, 1, 0, 1179717, 1, 0, 1179718, 1, 0, 1179719, 1, 0, 1179720, 1, 0, 1179721, 1, 0, 1179722, 1, 0, 1179723, 1, 0, 1179724, 1, 0, 1179725, 1, 0, 1179726, 1, 0, 1179727, 1, 0, 1179728, 1, 0, 1179729, 1, 0, 1179739, 1, 0, 1179745, 1, 0, 1179753, 1, 0, 1179775, 1, 0, 1310710, 1, 0, 1245231, 1, 0, 1245232, 1, 0, 1245233, 1, 0, 1245234, 1, 0, 1245235, 1, 0, 1245236, 1, 0, 1245237, 1, 0, 1245238, 1, 0, 1245239, 1, 0, 1245240, 1, 0, 1245241, 1, 0, 1245242, 1, 0, 1245243, 1, 0, 1245244, 1, 0, 1245245, 1, 0, 1245246, 1, 0, 1245247, 1, 0, 1245248, 1, 0, 1245249, 1, 0, 1245250, 1, 0, 1245251, 1, 0, 1245252, 1, 0, 1245253, 1, 0, 1245254, 1, 0, 1245255, 1, 0, 1245256, 1, 0, 1245257, 1, 0, 1245258, 1, 0, 1245259, 1, 0, 1245260, 1, 0, 1245261, 1, 0, 1245262, 1, 0, 1245263, 1, 0, 1245264, 1, 0, 1245265, 1, 0, 1245275, 1, 0, 1245289, 1, 0, 1245311, 1, 0, 1376246, 1, 0, 1310767, 1, 0, 1310768, 1, 0, 1310769, 1, 0, 1310770, 1, 0, 1310771, 1, 0, 1310772, 1, 0, 1310773, 1, 0, 1310774, 1, 0, 1310775, 1, 0, 1310776, 1, 0, 1310777, 1, 0, 1310778, 1, 0, 1310779, 1, 0, 1310780, 1, 0, 1310781, 1, 0, 1310782, 1, 0, 1310783, 1, 0, 1310784, 1, 0, 1310785, 1, 0, 1310786, 1, 0, 1310787, 1, 0, 1310788, 1, 0, 1310789, 1, 0, 1310790, 1, 0, 1310791, 1, 0, 1310792, 1, 0, 1310793, 1, 0, 1310794, 1, 0, 1310795, 1, 0, 1310796, 1, 0, 1310797, 1, 0, 1310798, 1, 0, 1310799, 1, 0, 1310800, 1, 0, 1310801, 1, 0, 1310811, 1, 0, 1310825, 1, 0, 1310847, 1, 0, 1441782, 1, 0, 1376303, 1, 0, 1376304, 1, 0, 1376305, 1, 0, 1376306, 1, 0, 1376307, 1, 0, 1376308, 1, 0, 1376309, 1, 0, 1376310, 1, 0, 1376311, 1, 0, 1376312, 1, 0, 1376313, 1, 0, 1376314, 1, 0, 1376315, 1, 0, 1376316, 1, 0, 1376317, 1, 0, 1376318, 1, 0, 1376319, 1, 0, 1376320, 1, 0, 1376321, 1, 0, 1376322, 1, 0, 1376323, 1, 0, 1376324, 1, 0, 1376325, 1, 0, 1376326, 1, 0, 1376327, 1, 0, 1376328, 1, 0, 1376329, 1, 0, 1376330, 1, 0, 1376331, 1, 0, 1376332, 1, 0, 1376333, 1, 0, 1376334, 1, 0, 1376335, 1, 0, 1376336, 1, 0, 1376337, 1, 0, 1376347, 1, 0, 1376361, 1, 0, 1376383, 1, 0, 1507318, 1, 0, 1441883, 1, 0, 1441897, 1, 0, 1441919, 1, 0, 1572854, 1, 0, 1507419, 1, 0, 1507433, 1, 0, 1507455, 1, 0, 1638390, 1, 0, 1638391, 1, 0, 1638392, 1, 0, 1638393, 1, 0, 1638394, 1, 0, 1638395, 1, 0, 1638396, 1, 0, 1638397, 1, 0, 1572871, 1, 0, 1572872, 1, 0, 1572873, 1, 0, 1572874, 1, 0, 1572875, 1, 0, 1572876, 1, 0, 1572877, 1, 0, 1572878, 1, 0, 1572879, 1, 0, 1572880, 1, 0, 1572881, 1, 0, 1572882, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1572890, 1, 0, 1572891, 1, 0, 1572892, 1, 0, 1572893, 1, 0, 1572894, 1, 0, 1572895, 1, 0, 1572896, 1, 0, 1572897, 1, 0, 1572898, 1, 0, 1572899, 1, 0, 1572900, 1, 0, 1572901, 1, 0, 1572902, 1, 0, 1572903, 1, 0, 1572904, 1, 0, 1572905, 1, 0, 1572906, 1, 0, 1572907, 1, 0, 1572908, 1, 0, 1572909, 1, 0, 1572910, 1, 0, 1572911, 1, 0, 1572912, 1, 0, 1572913, 1, 0, 1572914, 1, 0, 1572915, 1, 0, 1572923, 1, 0, 1572924, 1, 0, 1572925, 1, 0, 1572926, 1, 0, 1572927, 1, 0, 1572928, 1, 0, 1572929, 1, 0, 1572930, 1, 0, 1572938, 1, 0, 1572939, 1, 0, 1572940, 1, 0, 1572941, 1, 0, 1572942, 1, 0, 1572943, 1, 0, 1572944, 1, 0, 1572945, 1, 0, 1572946, 1, 0, 1572947, 1, 0, 1572948, 1, 0, 1572955, 1, 0, 1572956, 1, 0, 1572957, 1, 0, 1572958, 1, 0, 1572959, 1, 0, 1572960, 1, 0, 1572961, 1, 0, 1572962, 1, 0, 1572963, 1, 0, 1572969, 1, 0, 1572970, 1, 0, 1572971, 1, 0, 1572972, 1, 0, 1572973, 1, 0, 1572974, 1, 0, 1572975, 1, 0, 1572976, 1, 0, 1572982, 1, 0, 1572983, 1, 0, 1572984, 1, 0, 1572985, 1, 0, 1572986, 1, 0, 1572987, 1, 0, 1572988, 1, 0, 1572989, 1, 0, 1572990, 1, 0, 1572991, 1, 0, 1703933, 1, 0, 1638407, 1, 0, 1638451, 1, 0, 1638452, 1, 0, 1638453, 1, 0, 1638454, 1, 0, 1638455, 1, 0, 1638456, 1, 0, 1638457, 1, 0, 1638458, 1, 0, 1638459, 1, 0, 1638466, 1, 0, 1638467, 1, 0, 1638468, 1, 0, 1638469, 1, 0, 1638470, 1, 0, 1638471, 1, 0, 1638472, 1, 0, 1638473, 1, 0, 1638474, 1, 0, 1638484, 1, 0, 1638491, 1, 0, 1638499, 1, 0, 1638505, 1, 0, 1638512, 1, 0, 1638513, 1, 0, 1638514, 1, 0, 1638515, 1, 0, 1638516, 1, 0, 1638517, 1, 0, 1638518, 1, 0, 1769469, 1, 0, 1703943, 1, 0, 1704020, 1, 0, 1704027, 1, 0, 1704035, 1, 0, 1704041, 1, 0, 1835005, 1, 0, 1769479, 1, 0, 1769556, 1, 0, 1769563, 1, 0, 1769571, 1, 0, 1769577, 1, 0, 1900541, 1, 0, 1835015, 1, 0, 1835092, 1, 0, 1835099, 1, 0, 1835107, 1, 0, 1835113, 1, 0, 1966077, 1, 0, 1900551, 1, 0, 1900628, 1, 0, 1900635, 1, 0, 1900643, 1, 0, 1900649, 1, 0, 2031613, 1, 0, 1966087, 1, 0, 1966164, 1, 0, 1966171, 1, 0, 1966179, 1, 0, 1966185, 1, 0, 2097149, 1, 0, 2031623, 1, 0, 2031700, 1, 0, 2031707, 1, 0, 2031715, 1, 0, 2031721, 1, 0, 2162685, 1, 0, 2097159, 1, 0, 2097236, 1, 0, 2097243, 1, 0, 2097251, 1, 0, 2097257, 1, 0, 2228221, 1, 0, 2162695, 1, 0, 2162772, 1, 0, 2162779, 1, 0, 2162787, 1, 0, 2162793, 1, 0, 2293757, 1, 0, 2228231, 1, 0, 2228308, 1, 0, 2228315, 1, 0, 2228323, 1, 0, 2228329, 1, 0, 2359293, 1, 0, 2293767, 1, 0, 2293844, 1, 0, 2293851, 1, 0, 2293859, 1, 0, 2293865, 1, 0, 2424829, 1, 0, 2424830, 1, 0, 2424831, 1, 0, 2359296, 1, 0, 2359297, 1, 0, 2359298, 1, 0, 2359299, 1, 0, 2359300, 1, 0, 2359301, 1, 0, 2359302, 1, 0, 2359303, 1, 0, 2359380, 1, 0, 2359387, 1, 0, 2359395, 1, 0, 2359401, 1, 0, 2424916, 1, 0, 2424923, 1, 0, 2424931, 1, 0, 2424937, 1, 0, 2490452, 1, 0, 2490453, 1, 0, 2490454, 1, 0, 2490455, 1, 0, 2490456, 1, 0, 2490457, 1, 0, 2490458, 1, 0, 2490459, 1, 0, 2490467, 1, 0, 2490468, 1, 0, 2490469, 1, 0, 2490470, 1, 0, 2490471, 1, 0, 2490472, 1, 0, 2490473, 1, 0 )

[node name="SpikeContainer" type="Node" parent="."]

[node name="Spike" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 420, 196 )

[node name="Spike2" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 428.063, 196 )

[node name="Spike3" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 436.125, 196 )

[node name="Spike4" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 444.188, 196 )

[node name="Spike5" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 452.25, 196 )

[node name="Spike6" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 460.313, 196 )

[node name="Spike7" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 468.304, 196 )

[node name="Spike8" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 539.677, 196 )

[node name="Spike9" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 547.74, 196 )

[node name="Spike10" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 555.802, 196 )

[node name="Spike11" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 563.865, 196 )

[node name="Spike12" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 571.927, 196 )

[node name="Spike13" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 579.99, 196 )

[node name="Spike14" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 587.982, 196 )

[node name="Spike15" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 908.153, 196 )

[node name="Spike16" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 916.215, 196 )

[node name="Spike17" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 924.278, 196 )

[node name="Spike18" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 932.34, 196 )

[node name="Spike19" parent="SpikeContainer" instance=ExtResource( 10 )]
position = Vector2( 940.332, 196 )

[node name="LauncherContainer" type="Node" parent="."]

[node name="Launcher" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 188.365, 123.833 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher2" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 196.693, 123.827 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher3" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 205.138, 123.833 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher4" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 213.465, 123.827 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher5" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 221.753, 123.833 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher6" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 230.081, 123.827 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher7" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 238.59, 123.833 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher8" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 246.918, 123.827 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher9" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 255.427, 123.833 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher10" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 263.755, 123.827 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher11" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 272.264, 123.833 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher12" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 281.041, 124.014 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="Launcher13" parent="LauncherContainer" instance=ExtResource( 13 )]
position = Vector2( 290.108, 124.162 )
rotation = 3.14159
_obstacle_active = true
firing_interval = 1.0
firing_direction = 2

[node name="ButtonContainer" type="Node" parent="."]

[node name="Button" parent="ButtonContainer" instance=ExtResource( 5 )]
position = Vector2( 968.536, 191.386 )

[node name="BridgeContainer" type="Node" parent="."]

[node name="Bridge_open_exit" parent="BridgeContainer" instance=ExtResource( 3 )]
position = Vector2( -7.9041, 191.852 )
closedPosition = 0
openedPosition = 1
_bridge_open = false

[node name="HomingObstContainer" type="Node" parent="."]

[node name="PathObstContainer" type="Node" parent="."]

[node name="GrabableObjsContainer" type="Node" parent="."]

[node name="PhaseObstContainer" type="Node" parent="."]

[node name="HintBoxContainer" type="Node" parent="."]

[node name="DeadZoneContainer" type="Node" parent="."]

[node name="DeadZone" parent="DeadZoneContainer" instance=ExtResource( 14 )]
position = Vector2( 499.865, 265.619 )

[node name="CheckpointContainer" type="Node" parent="."]

[node name="CheckPoint" parent="CheckpointContainer" instance=ExtResource( 8 )]
position = Vector2( 998.041, 191.236 )

[node name="CheckPoint2" parent="CheckpointContainer" instance=ExtResource( 8 )]
position = Vector2( 96.7914, 190.956 )

[node name="Player" parent="." instance=ExtResource( 9 )]
position = Vector2( 72.1163, 189.11 )
collision_mask = 15

[node name="Transitions" parent="." instance=ExtResource( 6 )]
position = Vector2( -2035.01, -3856.93 )
z_index = 10

[node name="LevelExit" parent="." instance=ExtResource( 7 )]
position = Vector2( -55.0621, 185.477 )
[connection signal="button_pressed" from="ButtonContainer/Button" to="." method="_on_Button_button_pressed"]
